--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-connexion == 1.1.15
+connexion[swagger-ui]==2.7.0
 python_dateutil == 2.6.0
 setuptools >= 21.0.0
+python-dotenv==0.14.0
+flask-session~=0.3.2
+requests>=2,<3
+msal>=0.6.1,<2
